2009-02-21  Matthias Clasen  <mclasen@redhat.com>

	* src/core/bell.c: Don't force CA_PROP_CANBERRA_ENABLE to 1.
	That was a misunderstanding on my part, and makes it impossible
	to get rid of the bell.

2009-02-11  Thomas Thurman  <tthurman@gnome.org>

	Use zenity for the session management dialogue that warns about
	clueless clients, not metacity-dialog.  This is the last change
	away from metacity-dialog and therefore closes #521914.

	* src/Makefile.am:
	* src/core/session.c:
	* src/core/util.c:
	* src/include/util.h:
	* src/ui/metacity-dialog.c (deleted):

2009-02-12  Matthias Clasen  <mclasen@redhat.com>

	* src/core/bell.c (meta_bell_set_audible): Now that we are
	using libcanberra, don't tell the X server to play the system
	bell internally.

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 557921 – [PATCH] Sound event support to metacity

	Patch by Lennart Poettering

	* configure.in: Require libcanberra-gtk

	* src/core/bell.c (meta_bell_notify): Play the alert sound from
	the sound theme instead of the dreaded system bell.

	* src/core/workspace.c (meta_workspace_activate_with_focus): Play
	a sound on workspace switch.

2009-02-11  Thomas Thurman  <tthurman@gnome.org>

        Session must be saved before display close, and display
        shouldn't close during shutdown if it's already closed.
        Can't believe we don't have a bug about this already...

	* src/core/display-private.h:
	* src/core/display.c:
	* src/core/main.c:
	* src/core/session.c:

2009-02-10  Matt Kraai  <kraai@ftfbs.org>

        Don't define meta_spew_event unless verbose mode is on.
	Closes #571126.

	* src/core/display.c:
	* src/core/window.c:

2009-02-10  Matt Kraai  <kraai@ftfbs.org>

	* README: switch is "--disable-verbose-mode", not "--disable-verbose".
          Closes #571210.

2009-02-10  Thomas Thurman  <tthurman@gnome.org>

        rm incorrect comment

	* src/include/util.h:

2009-02-10  Thomas Thurman  <tthurman@gnome.org>
